--- a/tpFinal/index.html
+++ b/tpFinal/index.html
@@ -8,11 +8,20 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="Aventura.js"></script>
   <script language="javascript" type="text/javascript" src="Boton.js"></script>
+  <script language="javascript" type="text/javascript" src="Celda.js"></script>
+  <script language="javascript" type="text/javascript" src="Fondo.js"></script>
+  <script language="javascript" type="text/javascript" src="Grilla.js"></script>
+  <script language="javascript" type="text/javascript" src="Hud.js"></script>
+  <script language="javascript" type="text/javascript" src="Juego.js"></script>
+  <script language="javascript" type="text/javascript" src="Libro.js"></script>
   <script language="javascript" type="text/javascript" src="Pantalla1Boton.js"></script>
   <script language="javascript" type="text/javascript" src="Pantalla2botones.js"></script>
   <script language="javascript" type="text/javascript" src="PantallaHome.js"></script>
+  <script language="javascript" type="text/javascript" src="PantallaResultado.js"></script>
   <script language="javascript" type="text/javascript" src="Pantallas.js"></script>
+  <script language="javascript" type="text/javascript" src="Personaje.js"></script>
   <script language="javascript" type="text/javascript" src="Texto.js"></script>
+  <script language="javascript" type="text/javascript" src="timer.js"></script>
   <script language="javascript" type="text/javascript" src="tpFinal.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
